# AoC2024

./: .gitignore
go/: go.mod
go/01/: main.go
go/util/: files.go
puzzles/01/: README.md
puzzles/02/: README.md  debug.txt
puzzles/03/: README.md
puzzles/04/: README.md  example.txt
puzzles/05/: README.md
puzzles/06/: README.md
python/: pyproject.toml
python/01/: solution.py
python/02/: solution.py
python/03/: solution.py
python/04/: solution.py
python/05/: solution.py
python/06/: solution.py
typescript/: .prettierrc  package-lock.json  package.json
typescript/01/: solution.ts
